# DLIR-Split

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  data.json  exec  results-resnet50_2.csv  results-resnet50_3.csv  results-resnet50_4.csv  results-resnet50_5.csv  results-vgg19_2.csv  results-vgg19_3.csv  results-vgg19_4.csv  results-vgg19_5.csv  results.csv  results.txt  results_back.csv  results_back.txt  test_config.json  testcpp.cpp
Benchmark/resnet50/: RTX-2080Ti.json
Benchmark/vgg19/: RTX-2080Ti.json  default.json  last_split.json
Onnxs/scripts/: create_by_pytorch.py
back/: results-resnet50_2.csv  results-resnet50_3.csv  results-resnet50_4.csv  results-vgg19_2.csv  results-vgg19_3.csv  results-vgg19_4.csv
entrance/: readme.md  test_gpu_allocator.cpp
entrance/Allocator/: main.cpp
entrance/GPUAllocator/: test.cpp
entrance/Split/: main.cpp
headers/common/: drivers.h  pathmanager.h
include/Benchmark/: evaluate_models.h
include/Common/: DILException  DILException.h  DLIException.h  JsonSerializer.h  PathManager.h  Serializability.h
include/GPUAllocator/: ExecutorManager.h  ModelExecutor.h  Task.h  TaskDigest.h  TaskRegistration.h  TokenManager.h  task.h
libs/: openGA.hpp
log/: split-log.json
scripts/: run.sh
test/: tempCodeRunnerFile.cpp  test.cpp  test_analyzer.cpp  test_cxx.cpp  test_gpu_allocator.cpp  test_model_executor.cpp  test_model_executor_only_childs.cpp  test_models.cpp  test_module.cpp  test_possion.cpp  test_random_split.cpp  test_run_child_models.cpp  test_run_onnx.cpp  test_uniform_split.cpp  test_use_json.cpp
(+1201 files in other folders)
